--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
                 published on this website under &#8216;Competitions&#8217;. Have fun reading some proofs :D
             </p>
 
-            <p style="margin-top: 34px;">
-            <div class="center-it">
+            <!-- ------------------------------ Atom animation ------------------------------ -->
+            <p>
+            <div class="center-atom">
+
                 <div class="ellipse">
                     <div class="circle"></div>
                 </div>
@@ -138,8 +140,10 @@
                 </div>
 
                 <div id="nucleus"></div>
+
             </div>
             </p>
+            <!-- ------------------------------ Atom animation ------------------------------ -->
 
         </article>
     </main>
