--- a/competitions.html
+++ b/competitions.html
@@ -90,7 +90,260 @@
                 my time. The best advice I can give is to invest plenty of time trying to solve these problems to
                 develop a strong intuition for them, and only then look up the solution, which you should deeply
                 understand and memorize. <br> <br>
+            </p>
 
+            <!-- ----------------------------- Brain chip animation ---------------------------- -->
+            <p>
+            <div class="center-brain-chip">
+
+                <div id="chip">&#8734;</div>
+
+                <div id="chip_boundary"></div>
+
+                <!-- Draw all brain lines + circles -->
+                <svg height="250" width="250" xmlns="http://www.w3.org/2000/svg">
+                    <!-- 4 paths at the top docking the chip & corresponding circles -->
+                    <path fill="none" d="M 110 74 l -9 -9 l -19 0 l -9 -9" stroke="cyan" stroke-width="2" />
+                    <circle cx="73" cy="56" fill="cyan" r="4" />
+
+                    <path fill="none" d="M 117 74 l 0 -20 l 10 -10 l 11 0" stroke="cyan" stroke-width="2" />
+                    <circle cx="138" cy="44" fill="cyan" r="4" />
+
+                    <path fill="none" d="M 130 74 l 0 -16" stroke="cyan" stroke-width="2" />
+                    <circle cx="130" cy="58" fill="cyan" r="4" />
+
+                    <path fill="none" d="M 140 74 l 0 -10 l 10 -10" stroke="cyan" stroke-width="2" />
+                    <circle cx="150" cy="54" fill="cyan" r="4" />
+
+
+                    <!-- 4 paths at the top not docking the chip & corresponding circles -->
+                    <path fill="none" d="M 88 46 l -25 0 l -16 16" stroke="cyan" stroke-width="2" />
+                    <circle cx="88" cy="46" fill="cyan" r="4" />
+                    <circle cx="47" cy="62" fill="cyan" r="4" />
+
+                    <path fill="none" d="M 96 56 l 21 -21 l 31 0 l 13 13 l 0 23" stroke="cyan" stroke-width="2" />
+                    <circle cx="96" cy="56" fill="cyan" r="4" />
+                    <circle cx="161" cy="71" fill="cyan" r="4" />
+
+                    <path fill="none" d="M 173 45 l 13 0 l 16 16 l 0 39" stroke="cyan" stroke-width="2" />
+                    <circle cx="173" cy="45" fill="cyan" r="4" />
+                    <circle cx="202" cy="100" fill="cyan" r="4" />
+
+                    <path fill="none" d="M 68 70 l -25 0 l -16 16 l 0 25 l 10 10" stroke="cyan" stroke-width="2" />
+                    <circle cx="68" cy="70" fill="cyan" r="4" />
+                    <circle cx="37" cy="121" fill="cyan" r="4" />
+
+
+                    <!-- 4 paths at the left docking the chip & corresponding circles -->
+                    <path fill="none" d="M 99 87 l -30 0 l -8 8" stroke="cyan" stroke-width="2" />
+                    <circle cx="61" cy="95" fill="cyan" r="4" />
+
+                    <path fill="none" d="M 99 97 l -18 0" stroke="#88b5f4" stroke-width="2" />
+                    <circle cx="81" cy="97" fill="#88b5f4" r="4" />
+
+                    <path fill="none" d="M 99 107 l -40 0 l -11 -11 l 0 -15" stroke="#88b5f4" stroke-width="2" />
+                    <circle cx="48" cy="81" fill="#88b5f4" r="4" />
+
+                    <path fill="none" d="M 99 113 l -13 0 l -8 8" stroke="#88b5f4" stroke-width="2" />
+                    <circle cx="78" cy="121" fill="#88b5f4" r="4" />
+
+
+                    <!-- 2 paths at the left not docking the chip & corresponding circles -->
+                    <path fill="none" d="M 38 102 l 12 12 l 0 20 l 15 15 l 30 0" stroke="#88b5f4" stroke-width="2" />
+                    <circle cx="38" cy="102" fill="#88b5f4" r="4" />
+                    <circle cx="95" cy="149" fill="#88b5f4" r="4" />
+
+                    <path fill="none" d="M 61 121 l 0 12 l 8 8" stroke="#88b5f4" stroke-width="2" />
+                    <circle cx="61" cy="121" fill="#88b5f4" r="4" />
+                    <circle cx="69" cy="141" fill="#88b5f4" r="4" />
+
+
+                    <!-- 2 paths at the right docking the chip & corresponding circles -->
+                    <path fill="none" d="M 151 99 l 25 0 l 15 -15" stroke="#88b5f4" stroke-width="2" />
+                    <circle cx="191" cy="84" fill="#88b5f4" r="4" />
+
+                    <path fill="none" d="M 151 107 l 20 0 l 15 15" stroke="violet" stroke-width="2" />
+                    <circle cx="186" cy="122" fill="violet" r="4" />
+
+
+                    <!-- 6 paths at the right not docking the chip & corresponding circles -->
+                    <path fill="none" d="M 166 87 l 14 -14 l 0 -15" stroke="#88b5f4" stroke-width="2" />
+                    <circle cx="166" cy="87" fill="#88b5f4" r="4" />
+                    <circle cx="180" cy="58" fill="#88b5f4" r="4" />
+
+                    <path fill="none" d="M 185 103 l 11 11 l 15 0" stroke="violet" stroke-width="2" />
+                    <circle cx="185" cy="103" fill="violet" r="4" />
+                    <circle cx="211" cy="114" fill="violet" r="4" />
+
+                    <path fill="none" d="M 212 76 l 11 11 l 0 40 l -22 22" stroke="violet" stroke-width="2" />
+                    <circle cx="212" cy="76" fill="violet" r="4" />
+                    <circle cx="201" cy="149" fill="violet" r="4" />
+
+                    <path fill="none" d="M 201 123 l -17 17 l 0 15" stroke="violet" stroke-width="2" />
+                    <circle cx="201" cy="123" fill="violet" r="4" />
+                    <circle cx="184" cy="155" fill="violet" r="4" />
+
+                    <path fill="none" d="M 161 118 l 12 12 l 0 66" stroke="violet" stroke-width="2" />
+                    <circle cx="161" cy="118" fill="violet" r="4" />
+                    <circle cx="173" cy="196" fill="violet" r="4" />
+
+                    <path fill="none" d="M 183 190 l 0 -20 l 10 -10 l 10 0 l 15 -15" stroke="violet" stroke-width="2" />
+                    <circle cx="218" cy="145" fill="violet" r="4" />
+                    <circle cx="183" cy="190" fill="violet" r="4" />
+
+
+                    <!-- 2 paths at the bottom docking the chip & corresponding circles -->
+                    <path fill="none" d="M 147 122 l 15 15 l 0 45" stroke="violet" stroke-width="2" />
+                    <circle cx="162" cy="182" fill="violet" r="4" />
+
+                    <path fill="none" d="M 115 126 l 13 13 l 10 0" stroke="violet" stroke-width="2" />
+                    <circle cx="138" cy="139" fill="violet" r="4" />
+
+
+                    <!-- 1 path at the bottom not docking the chip & corresponding circles -->
+                    <path fill="none" d="M 88 133 l 20 0 l 16 16 l 25 0" stroke="violet" stroke-width="2" />
+                    <circle cx="88" cy="133" fill="violet" r="4" />
+                    <circle cx="149" cy="149" fill="violet" r="4" />
+
+
+
+                    <!-- ----------------------------- Electrons ----------------------------- -->
+                    <!-- 
+                    M 125 100 <--- Middle point
+                    M 99 107 l -40 0 l -11 -11 l 0 -15 l 0 15 l 11 11 l 40 0 <--- First segment
+                    M 151 99 l 25 0 l 15 -15 <--- Second segment
+                    M 147 122 l 15 15 l 0 45 <--- Third segment
+                    M 117 74 l 0 -20 l 10 -10 l 11 0 <--- Fourth segment
+                    -->
+                    <!-- Define path for the electron -->
+                    <path id="left_right_down_up" fill="none" d="M 99 107 l -40 0 l -11 -11 l 0 -15 l 0 15 l 11 11 l 40 0 
+                    M 125 100 l 26 -1 l 25 0 l 15 -15 l -15 15 l -25 0 
+                    M 125 100 l 22 22 l 15 15 l 0 45 l 0 -45 l -15 -15 
+                    M 125 100 l -8 -26 l 0 -20 l 10 -10 l 11 0 l -11 0 l -10 10 l 0 20
+                    M 125 100 l -26 7" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="2s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#left_right_down_up" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <!-- 
+                    M 125 100 <--- Middle point
+                    M 147 122 l 15 15 l 0 45 <--- First segment
+                    M 117 74 l 0 -20 l 10 -10 l 11 0 <--- Second segment
+                    M 99 107 l -40 0 l -11 -11 l 0 -15 <--- Third segment
+                    M 151 99 l 25 0 l 15 -15 <--- Fourth segment
+                    -->
+                    <path id="down_up_left_right_" fill="none" d="M 147 122 l 15 15 l 0 45 l 0 -45 l -15 -15 
+                    M 125 100 l -8 -26 l 0 -20 l 10 -10 l 11 0 l -11 0 l -10 10 l 0 20
+                    M 125 100 l -26 7 l -40 0 l -11 -11 l 0 -15 l 0 15 l 11 11 l 40 0
+                    M 125 100 l 26 -1 l 25 0 l 15 -15 l -15 15 l -25 0 
+                    M 125 100 l 22 22" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="2s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#down_up_left_right_" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <!-- 
+                    M 125 100 <--- Middle point
+                    M 151 107 l 20 0 l 15 15 <--- First segment
+                    M 110 74 l -9 -9 l -19 0 l -9 -9 <--- Second segment
+                    M 115 126 l 13 13 l 10 0 <--- Third segment
+                    M 99 87 l -30 0 l -8 8 <--- Fourth segment
+                    -->
+                    <path id="right_up_down_left" fill="none" d="M 151 107 l 20 0 l 15 15 l -15 -15 l -20 0
+                    M 125 100 l -15 -26 l -9 -9 l -19 0 l -9 -9 l 9 9 l 19 0 l 9 9 
+                    M 125 100 l -10 26 l 13 13 l 10 0 l -10 0 l -13 -13
+                    M 125 100 l -26 -13 l -30 0 l -8 8 l 8 -8 l 30 0 
+                    M 125 100 l 26 7" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="3s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#right_up_down_left" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <!-- 
+                    M 125 100 <--- Middle point
+                    M 140 74 l 0 -10 l 10 -10 <--- First segment
+                    M 99 113 l -13 0 l -8 8 <--- Second segment
+                    M 130 74 l 0 -16 <--- Third segment
+                    M 99 97 l -18 0 <--- Fourth segment
+                    -->
+                    <path id="up_left_up_left" fill="none" d="M 140 74 l 0 -10 l 10 -10 l -10 10 l 0 10
+                    M 125 100 l -26 13 l -13 0 l -8 8 l 8 -8 l 13 0 
+                    M 125 100 l 5 -26 l 0 -16 l 0 16 
+                    M 125 100 l -26 -3 l -18 0 l 18 0
+                    M 125 100 l 15 -26" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="2s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#up_left_up_left" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <path id="left" fill="none"
+                        d="M 38 102 l 12 12 l 0 20 l 15 15 l 30 0 l -30 0 l -15 -15 l 0 -20 l -12 -12" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="1s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#left" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <path id="right" fill="none" d="M 212 76 l 11 11 l 0 40 l -22 22 l 22 -22 l 0 -40 l -11 -11" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="1.5s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#right" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <path id="left_2" fill="none"
+                        d="M 68 70 l -25 0 l -16 16 l 0 25 l 10 10 l -10 -10 l 0 -25 l 16 -16 l 25 0" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="1s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#left_2" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <path id="top_2" fill="none"
+                        d="M 96 56 l 21 -21 l 31 0 l 13 13 l 0 23 l 0 -23 l -13 -13 l -31 0 l -21 21" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="1.5s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#top_2" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <path id="right_2" fill="none"
+                        d="M 183 190 l 0 -20 l 10 -10 l 10 0 l 15 -15 l -15 15 l -10 0 l -10 10 l 0 20" />
+                    <circle fill="yellow" r="3">
+                        <animateMotion dur="1s" repeatCount="indefinite" calcMode="linear">
+                            <mpath href="#right_2" />
+                        </animateMotion>
+                    </circle>
+
+
+                    <!-- Corners of the svg frame for orientation -->
+                    <!-- Top left -->
+                    <!-- <circle cx="0" cy="0" fill="black" r="5" /> -->
+                    <!-- Bottom left -->
+                    <!-- <circle cx="0" cy="200" fill="black" r="5" /> -->
+                    <!-- Bottom right -->
+                    <!-- <circle cx="250" cy="200" fill="black" r="5" />  -->
+                    <!-- Top right -->
+                    <!-- <circle cx="250" cy="0" fill="black" r="5" /> -->
+                </svg>
+            </div>
+            </p>
+            <!-- ----------------------------- Brain chip animation ---------------------------- -->
+
+            <p>
                 Now, let me list some write-ups from a teenager who tried to learn lucid dreaming to solve
                 problems during sleep... <br>
                 Let BWM := <a href="https://www.mathe-wettbewerbe.de/bundeswettbewerb-mathematik" target="_blank"
@@ -217,6 +470,7 @@
                 </li>
             </ul>
             </p>
+
 
         </article>
     </main>
