--- a/cv.html
+++ b/cv.html
@@ -164,6 +164,13 @@
 
             <p>
             <ol reversed style="margin-top: -10px;">
+                <li style="margin-bottom: 15px;"><b>Compiled Nonlocal Games from any Trapdoor Claw-Free Function</b>
+                    <a href="documents/Compiled_Nonlocal_Games_from_any_TCF_Kaniuar_Bacho.pdf" target="_blank"
+                        class="underline-hover">[slides]</a> <br>
+
+                    CRYPTO 2025 (<i>Aug 2025</i>)
+                </li>
+
                 <li style="margin-bottom: 15px;"><b>Compiling Nonlocal Games without Quantum Homomorphic Encryption</b>
                     <a href="documents/Compiling_Nonlocal_Games_Kaniuar_Bacho.pdf" target="_blank"
                         class="underline-hover">[slides]</a> <br>
