--- a/competitions.html
+++ b/competitions.html
@@ -48,7 +48,7 @@
     <main class="split-page">
         <aside class="left-panel">
             <div>
-                <img class="my_profile_pic_2" src="img/Red.webp" alt="Profile Picture of Kaniuar Bacho" />
+                <img class="my_profile_pic_2" src="img/Red.jpeg" alt="Profile Picture of Kaniuar Bacho" />
             </div>
 
             <section>
