--- a/cv.html
+++ b/cv.html
@@ -168,6 +168,7 @@
                     <a href="documents/Compiled_Nonlocal_Games_from_any_TCF_Kaniuar_Bacho.pdf" target="_blank"
                         class="underline-hover">[slides]</a> <br>
 
+                    Kyoto University Quantum Cryptography Workshop (<i>Oct 2025</i>) <br>
                     CRYPTO 2025 (<i>Aug 2025</i>)
                 </li>
 
@@ -232,7 +233,7 @@
             </header>
 
             <p>
-                I have served as a subreviewer for the following conferences: TQC 2025, ASIACRYPT 2025
+                I have served as a subreviewer for the following conferences: TQC 2025, ASIACRYPT 2025, EUROCRYPT 2026
             </p>
 
         </article>
