--- a/index.html
+++ b/index.html
@@ -90,22 +90,23 @@
             </header>
 
             <p>
-                Hey, I'm Kano! <br>
+                Hey, I’m Kano! <br>
 
-                I'm a PhD student in Quantum Cryptography at the <a href="https://informatics.ed.ac.uk/" target="_blank"
-                    class="underline-hover">University of Edinburgh's School of Informatics</a> and member of the <a
+                I’m a PhD student in Quantum Cryptography at the <a href="https://informatics.ed.ac.uk/" target="_blank"
+                    class="underline-hover">University of Edinburgh’s School of Informatics</a> and member of the <a
                     href="https://www.quantumsoftwarelab.com/" target="_blank" class="underline-hover">Quantum Software
                     Lab</a>.
 
-                My research focuses on exploring the minimal assumption in quantum cryptography that still
-                ensures a rich family of useful applications.
+                My research focuses on constructing quantum cryptographic protocols, including blind remote state
+                preparation, proofs of quantumness, classical verification of quantum computation, and related tasks.
+
 
                 I was fortunate to be awarded full funding for my PhD
                 studies by the School of Informatics.
             </p>
 
             <p>
-                I obtained my master's degree in IT Security from the <a href="https://informatik.rub.de/en/"
+                I obtained my master’s degree in IT Security from the <a href="https://informatik.rub.de/en/"
                     target="_blank" class="underline-hover">Ruhr University Bochum</a>, with a special focus on
                 <i>Cryptography</i> and <i>Quantum Information</i>. <br>
 
